<resources>
    <string name="app_name">Golfr</string>
    <string name="stroke_data">Stroke Data</string>
    <string name="my_clubs">My Clubs</string>
    <string name="stroke_data_multi">Stroke&#10;Data</string>
    <string name="my_clubs_multi"> My&#10;Clubs</string>
    <string name="btn_add_club">Add Club</string>
    <string name="btn_add_stroke">Record Stroke</string>
    <string name="lbl_club_name">Club Name</string>
    <string name="lbl_date_created">Date Created</string>
    <string name="lbl_active">Active</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="lbl_club">Club</string>
    <string name="lbl_direction">Direction</string>
    <string name="lbl_distance">Distance</string>
    <string name="hook">Hook</string>
    <string name="draw">Draw</string>
    <string name="pull">Pull</string>
    <string name="pure">Pure</string>
    <string name="push">Push</string>
    <string name="fade">Fade</string>
    <string name="slice">Slice</string>
    <string name="lbl_num_strokes">Total Strokes: </string>
    <string name="lbl_average_distance">Average Distance: </string>
    <string name="stroke_summary">Stroke Summary</string>
    <string name="unused_direction">N/A</string>
    <string name="btn_club_summary">Summary</string>
    <string name="btn_about">About</string>
    <string name="invalid_button">Please activate club first</string>
    <string name="about_msg">"This app was created as my final project in Mobile Applications Development - Spring 2023

I hope you are getting good use out of it!

    - Jackson Kistler"</string>


    <string-array name="direction_spinner_data">
        <item>Hook</item>
        <item>Draw</item>
        <item>Pull</item>
        <item>Pure</item>
        <item>Push</item>
        <item>Fade</item>
        <item>Slice</item>

    </string-array>

    <string name = "unable_to_save_stroke">Unable to save stroke</string>
    <string name = "unable_to_save_club">Unable to save club</string>
    <string name = "error_distance_empty">Please enter a distance</string>
    <string name = "error_invalid_distance">Invalid Distance</string>
    <string name = "error_club_name_empty">You must enter a Club Name</string>
    <string name = "error_club_name_long">Club Name is too long</string>
    <string name = "error_date_empty">Please enter a date</string>
    <string name = "error_date_future">Date cannot be in the future</string>

    <string name = "delete_stroke">Delete Stroke?</string>
    <string name = "delete_stroke_text">Are you sure you want to delete this record?</string>
    <string name = "delete_club">Delete Club?</string>
    <string name = "delete_club_text">Are you sure you want to delete this club? Associated strokes will be changed to UNKNOWN club</string>
    <string name = "delete_club_only">Delete Club Only</string>
    <string name = "delete_club_and_strokes">Delete Club &amp; Strokes</string>

    <string name = "total_reset">Delete All Data</string>
    <string name = "total_reset_text">WARNING! THIS WILL DELETE ALL DATA! ARE YOU SURE YOU WANT TO CONTINUE?</string>

    <string name = "yes">Yes</string>
    <string name = "no">No</string>
    <string name = "cancel">Cancel</string>
    <string name = "ok">OK</string>

</resources>