<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StrokeSummaryActivity">

    <TextView
        android:id="@+id/lblSummaryHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/stroke_summary"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblCountStrokes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/light_green"
            android:padding="5dp"
            android:text="@string/lbl_num_strokes"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblAverageDistance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/light_green"
            android:padding="5dp"
            android:text="@string/lbl_average_distance"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/goodStrokes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/light_green"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/draw"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtCountDraw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/unused_direction"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:alpha=".9"
                android:src="@drawable/draw" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/dark_green"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/pure"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtCountPure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/unused_direction"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:alpha=".9"
                android:src="@drawable/straight" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/light_green"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/fade"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtCountFade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/unused_direction"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:alpha=".9"
                android:src="@drawable/fade" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/badStrokes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/hook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/bg_green"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/hook"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtCountHook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/unused_direction"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:alpha=".9"
                android:src="@drawable/hook" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/silver"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/pull"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtCountPull"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/unused_direction"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:alpha=".9"
                android:src="@drawable/pull" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/bg_green"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/push"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtCountPush"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/unused_direction"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView88"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:alpha=".9"
                android:src="@drawable/push" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/slice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/silver"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/slice"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtCountSlice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/layout_bg"
                android:backgroundTint="@color/white"
                android:text="@string/unused_direction"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:alpha=".9"
                android:src="@drawable/slice" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>